--- a/assets/scss/_menu.scss
+++ b/assets/scss/_menu.scss
@@ -38,3 +38,94 @@
         }
     }
 }
+
+// Menu Overlay
+.menu {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    opacity: 0.9;
+    visibility: hidden;
+
+    &.tampil {
+        visibility: visible;
+    }
+
+    &-branding,
+    &-nav {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        float: left;
+        width: 50%;
+        height: 100vh;
+        overflow: hidden;
+    }
+    &-nav {
+        margin: 0;
+        padding: 0;
+        background: darken($warna-utama, 5);
+        list-style: none;
+        transform: translate3d(0, -100%, 0);
+        @include nimbulOut;
+
+        &.tampil {
+            transform: translate3d(0 ,0 ,0);
+        }
+    }
+
+    &-branding {
+        background: $warna-utama;
+        transform: translate3d(0, 100%, 0);
+        @include nimbulOut;
+
+        &.tampil {
+            transform: translate3d(0 ,0 ,0);
+        }
+
+        .potret {
+            width: 250px;
+            height: 250px;
+            background: url('../img/arnold.jpg');
+            border-radius: 50%;
+            border: solid 3px $warna-kedua;
+        }
+    }
+
+    .nav-item {
+        transform: translate3d(600px, 0, 0);
+        @include nimbulOut;
+
+        &.tampil {
+            transform: translate3d(0 ,0 ,0);
+        }
+
+        &.current > a {
+            color: $warna-kedua;
+        }
+    }
+
+    .nav-link {
+        display: inline-block;
+        position: relative;
+        font-size: 30px;
+        text-transform: uppercase;
+        padding: 1rem 0;
+        font-weight: 300;
+        color: #ffffff;
+        text-decoration: none;
+        @include nimbulOut;
+
+        &.hover {
+            color: $warna-kedua;
+        }
+    }
+}
+
+//Delay Nav Item
+@for $x from 1 through 4 {
+    .nav-item:nth-child(#{$x}) {
+        transition-delay: $x * 0.1s;
+    }
+}
