--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,7 +47,7 @@
     .menu-nav.tampil {
       transform: translate3d(0, 0, 0); }
   .menu-branding {
-    background: #444;
+    background: #444444;
     transform: translate3d(0, 100%, 0);
     transition: all 0.5s ease-out; }
     .menu-branding.tampil {
@@ -57,14 +57,14 @@
       height: 250px;
       background: url("../img/arnold.jpg");
       border-radius: 50%;
-      border: solid 3px #eece1a; }
+      border: solid 3px #1ab2ee; }
   .menu .nav-item {
     transform: translate3d(600px, 0, 0);
     transition: all 0.5s ease-out; }
     .menu .nav-item.tampil {
       transform: translate3d(0, 0, 0); }
     .menu .nav-item.current > a {
-      color: #eece1a; }
+      color: #1ab2ee; }
   .menu .nav-link {
     display: inline-block;
     position: relative;
@@ -75,8 +75,8 @@
     color: #ffffff;
     text-decoration: none;
     transition: all 0.5s ease-out; }
-    .menu .nav-link.hover {
-      color: #eece1a; }
+    .menu .nav-link:hover {
+      color: #1ab2ee; }
 
 .nav-item:nth-child(1) {
   transition-delay: 0.1s; }
@@ -94,8 +94,8 @@
   box-sizing: border-box; }
 
 body {
-  background: #444;
-  color: #fff;
+  background: #444444;
+  color: #ffffff;
   height: 100%;
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -140,19 +140,125 @@ header {
   width: 100%; }
 
 .text-dua {
-  color: #eece1a; }
+  color: #1ab2ee; }
 
 main {
   padding: 4rem;
-  height: 100%; }
+  min-height: calc(100vh - 60px); }
   main .icons {
     margin-top: 1rem; }
     main .icons a {
       padding: 0.4rem; }
       main .icons a:hover {
-        color: #eece1a;
+        color: #1ab2ee;
         transition: all 0.5s ease-out; }
   main#home {
     overflow: hidden; }
     main#home h1 {
       margin-top: 20vh; }
+
+.info-tentang {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-areas: 'bioimg bio bio' 'edu1 edu2 edu3';
+  grid-template-columns: repeat(3, 1fr); }
+  .info-tentang .bio-img {
+    grid-area: bioimg;
+    margin: auto;
+    border-radius: 50%;
+    border: #1ab2ee 3px solid; }
+  .info-tentang .bio {
+    grid-area: bio;
+    font-size: 1.5rem; }
+  .info-tentang .edu-1 {
+    grid-area: edu1; }
+  .info-tentang .edu-2 {
+    grid-area: edu2; }
+  .info-tentang .edu-3 {
+    grid-area: edu3; }
+  .info-tentang .pendidikan {
+    background: #515151;
+    padding: 0.5rem;
+    border-bottom: #1ab2ee 5px solid; }
+
+.projek {
+  display: grid;
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr); }
+  .projek img {
+    width: 100%;
+    border: 3px #ffffff solid; }
+    .projek img:hover {
+      opacity: 0.5;
+      border-color: #1ab2ee;
+      transition: all 0.5s ease-out; }
+
+.btn, .btn-light, .btn-dark {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem; }
+  .btn:hover, .btn-light:hover, .btn-dark:hover {
+    background: #1ab2ee;
+    color: #000000; }
+
+.btn-light {
+  background: #c4c4c4;
+  color: #333333; }
+
+.btn-dark {
+  background: black;
+  color: #ffffff; }
+
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: #2b2b2b;
+  color: #ffffff;
+  height: 60px; }
+
+@media screen and (min-width: 1171px) {
+  .projek {
+    grid-template-columns: repeat(4, 1fr); } }
+
+@media screen and (min-width: 769px) and (max-width: 1170px) {
+  .projek {
+    grid-template-columns: repeat(3, 1fr); } }
+
+@media screen and (max-width: 768px) {
+  main {
+    align-items: center;
+    text-align: center; }
+    main .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem; }
+  ul.menu-nav,
+  div.menu-branding {
+    float: none;
+    width: 100%;
+    min-height: 0; }
+    ul.menu-nav.show,
+    div.menu-branding.show {
+      transform: translate3d(0, 0, 0); }
+  .menu-nav {
+    height: 75vh;
+    transform: translate3d(-100%, 0, 0);
+    font-size: 24px; }
+  .menu-branding {
+    height: 25vh;
+    transform: translate3d(100%, 0, 0); }
+    .menu-branding .potret {
+      background: url(../img/arnold.jpg);
+      width: 120px;
+      height: 120px; }
+  .info-tentang {
+    grid-template-areas: 'bioimg' 'bio' 'edu1' 'edu2' 'edu3';
+    grid-template-columns: 1fr; }
+  .projek {
+    grid-template-columns: repeat(2, 1fr); } }
+
+@media screen and (max-width: 500px) {
+  main#home h1 {
+    margin-top: 10vh; }
+  .projek {
+    grid-template-columns: 1fr; } }
