--- a/assets/scss/_mobile.scss
+++ b/assets/scss/_mobile.scss
@@ -46,7 +46,7 @@
         transform: translate3d(100%, 0, 0);
 
         .potret {
-            background: url(../img/arnold.jpg);
+            background: url(../img/arnold-sm.jpg);
             width: 120px;
             height: 120px;
         }
