--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -128,6 +128,32 @@ main {
   }
 }
 
+// Kontak
+.hubungi {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+
+  div {
+    font-size: 2rem;
+    border: 3px #ffffff solid;
+    padding: 1.5rem 2.5rem;
+    margin-bottom: 3rem;
+    @include nimbulOut;
+
+    &:hover {
+      padding: 0.5rem 1.5rem;
+      background: $warna-kedua;
+      color: set-warna-teks($warna-kedua);
+      span {
+        color: set-warna-teks($warna-kedua);
+      }
+    }
+  }
+}
+
 // Button
 .btn {
   display: block;
